--- a/defaultSkin.css
+++ b/defaultSkin.css
@@ -48,64 +48,73 @@ canvas, img {
 
 /* menu BEGIN */
 
+#menuCentering{
+	width: 50%;
+	margin: auto;
+}
+
 #menu {
-background: #eee;
-float: left;
+	background: #eee;
+	float: left;
 }
 #menu ul {
-list-style: none;
-margin: 0;
-padding: 0;
-width: 12em;
-float: left;
+	list-style: none;
+	margin: 0;
+	padding: 0;
+	width: 10em;
+	float: left;
 }
 
 #menu a {
-color: #000;
-background: #efefef;
-text-decoration: none;
+	color: #000;
+	background: #efefef;
+	text-decoration: none;
 }
 
 #menu a:hover {
-color: #a00;
-background: #fff;
+	color: #a00;
+	background: #fff;
 }
 
 
 #menu a, #menu h2 {
-font: bold 11px/16px arial, helvetica, sans-serif;
-display: block;
-border-width: 1px;
-border-style: solid;
-border-color: #ccc #888 #555 #bbb;
-margin: 0;
-padding: 2px 3px;
+	font: bold 11px/16px arial, helvetica, sans-serif;
+	display: block;
+	border-width: 1px;
+	border-style: solid;
+	border-color: #ccc #888 #555 #bbb;
+	margin: 0;
+	padding: 2px 3px;
 }
 
 /* Positioning the Popout Menus and Dropdown Menus */
 
-#menu li {position: relative;}
+#menu li {
+	position: relative;
+}
 
 #menu ul ul {
-position: absolute;
-z-index: 500;
+	position: absolute;
+	z-index: 500;
 }
 
 #menu ul ul ul {
-top: 0;
-left: 100%;
+	top: 0;
+	left: 100%;
 }
 
 /* Hiding and Revealing using */
 
 div#menu ul ul,
 div#menu ul li:hover ul ul,
-div#menu ul ul li:hover ul ul
-{display: none;}
+div#menu ul ul li:hover ul ul{
+	display: none;
+}
 
 div#menu ul li:hover ul,
 div#menu ul ul li:hover ul,
-div#menu ul ul ul li:hover ul
-{display: block;}
+div#menu ul ul ul li:hover ul{
+	display: block;
+}
 
 /* menu END */
